Fix bike map on mobile view

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -2264,7 +2264,7 @@ body {
   top: 0;
   left: 0;
   font-family: 'Tungsten-Medium';
-  font-size: 150px;
+  font-size: 120px;
   color: $color-watermark;
   line-height: 1;
   z-index: -1;
@@ -2311,6 +2311,10 @@ body {
 
 /* Schedule */
 .schedule {
+
+  .wrapper {
+    padding: 18px 0;
+  }
 
   .table {
     display: block;
@@ -2666,17 +2670,15 @@ body {
   .formation {
     text-align: center;
     margin: 0 auto;
-    width: 280px;
+    width: 320px;
+    padding-left: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    @media (min-width: 360px) {
-      width: 310px;
-    }
-
     @media (min-width: 768px) {
       width: 616px;
+      padding-left: 0;
     }
 
     @include breakpoint(md) {
@@ -2842,7 +2844,7 @@ body {
       }
 
       &.has-sub-instructor {
-        width: 160px;
+        width: 130px;
         position: relative;
         min-height: 180px;
 
@@ -2871,11 +2873,21 @@ body {
           &:last-of-type {
             left: 50%;
             margin-left: -20px;
+            z-index: 1;
 
             @include breakpoint(md) {
               margin-left: -30px;
             }
           }
+        }
+      }
+
+      .name {
+        margin-top: 0;
+        font-size: 24px;
+
+        @include breakpoint(md) {
+          font-size: 2em;
         }
       }
 
@@ -2937,7 +2949,6 @@ body {
   &.seats-13 {
 
     .formation.back {
-      margin-top: 50px;
 
       @include breakpoint(md) {
         margin-top: 0;
@@ -2951,10 +2962,9 @@ body {
       &.instructor {
         margin-left: auto!important;
         margin-right: auto!important;
-        margin-bottom: -170px;
+        margin-bottom: -200px;
 
         @include breakpoint(sm) {
-          margin-bottom: -200px;
           margin-top: 0;
         }
 
@@ -3131,8 +3141,8 @@ body {
 
       &.colums-2 {
         width: 41px;
-        margin-left: 34px;
-        margin-right: 30px;
+        margin-left: 24px;
+        margin-right: 24px;
 
         @media (min-width: 768px) {
           width: 80px;
